# qca

./: .gitignore  CMakeLists.txt  LICENSE  Performance  README  README.md  TODO  anderson.hpp  basis.hpp  diagonaliser.hpp  eigenHelpers.hpp  qca.hpp  runDiagonaliser.cpp  runQca.cpp  setup.py  system.hpp  test.hpp  utilities.hpp
conda/: build.sh  meta.yaml
conda/boost-headers/: build.sh  meta.yaml
conda/boost-python/: build.sh  meta.yaml
conda/boost-test/: build.sh  meta.yaml
conda/coma/: meta.yaml
conda/eigen/: build.sh  meta.yaml
conda/qca/: build.sh  meta.yaml
doc/: CMakeLists.txt  Doxyfile.in  Readme.dox
qca/: __init__.py  _version.py  layout.py  models.py  selfconsistency.py
qca/test/: __init__.py  test_qca.py
src/: CMakeLists.txt  basis.hpp  cqca.hpp  eigenHelpers.hpp  pythonbinding.cpp  qca.hpp  runQca.cpp  system.hpp  updateVersion.hpp.sh  utilities.hpp  version.hpp.in
tests/: CMakeLists.txt  NotesAndTests.txt  basisTest.cpp  cqcaTest.cpp  eigenHelpersTest.cpp  qcaIsingTest.cpp  qcaTest.cpp  systemTest.cpp  utilitiesTest.cpp  verifyAgainstMathematica
tools/: datafile.py  findmax.py  qcadatafile.py
